speaker routes
